<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="LoginActivityBinding">

        <variable
            name="loginScreenViewModel"
            type="com.mexcelle.thoughtifydemo.viewModel.LoginScreenViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/login1" />

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/logo1"
                    android:layout_marginTop="@dimen/_55sdp"
                    android:layout_marginLeft="@dimen/_20sdp"/>


                <TextView
                    android:id="@+id/login_txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_120sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_txt1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp" />


                <TextView
                    android:id="@+id/login_txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_txt1"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_text11"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/login_txt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_txt2"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_txt3"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/login_txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_txt3"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_username_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:id="@+id/user_name_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/login_txt4"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounded_corner_edittext"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/login_username_tv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.75"
                        android:gravity="center"
                        android:text="@string/user_fontawesome"
                        android:textColor="@color/user_color"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/login_username_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4.25"
                        android:background="@android:color/transparent"
                        android:hint="@string/username_hint_txt"
                        android:text="@={loginScreenViewModel.emailId}"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/txt_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>


                <TextView
                    android:id="@+id/password_txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_name_ll"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_password_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


                <LinearLayout
                    android:id="@+id/password_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/password_txt4"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounded_corner_edittext"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/password_tv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/password_fontawesome"
                        android:textColor="@color/user_color"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@android:color/transparent"
                        android:hint="@string/password_hint_txt"
                        android:paddingLeft="@dimen/_10sdp"
                        android:inputType="textPassword"
                        android:text="@={loginScreenViewModel.password}"
                        android:textColor="@color/txt_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>


                <TextView
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/password_ll"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/gradiant_bg"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/login_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />


                <TextView
                    android:id="@+id/register_btn"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/login_btn"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/register_txt1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />


                <TextView
                    android:id="@+id/forgot_password_btn"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/login_btn"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@android:color/transparent"
                    android:gravity="right|center_vertical"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/forgot_password_txt"
                    android:textColor="@color/grey_txt_color1"
                    android:textSize="@dimen/_10sdp" />

                <View
                    android:id="@+id/line_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@+id/forgot_password_btn"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@color/light_grey1">

                </View>

                <RelativeLayout
                    android:id="@+id/google_rl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:orientation="horizontal"
                    android:layout_below="@+id/line_view"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounder_white_bg_with_border"
                    >

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/google_icon"
                        android:padding="@dimen/_8sdp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/google_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/signin_with_google_txt"
                        android:textColor="@color/grey_txt_color1"
                        android:textSize="@dimen/_10sdp" />

                </RelativeLayout>



            </RelativeLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>