<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data class="RegisterActivityBinding">

        <variable
            name="registerScreenViewModel"
            type="com.mexcelle.everywhendemo.viewModel.RegisterScreenViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/register_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/register" />


                <TextView
                    android:id="@+id/register_txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/register_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />


                <TextView
                    android:id="@+id/register_txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_txt1"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_txt2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_24sdp" />

                <TextView
                    android:id="@+id/register_txt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_txt2"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_txt3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />


                <TextView
                    android:id="@+id/register_txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_image"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_username_txt"
                    android:textColor="@color/grey_txt_color1"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:id="@+id/register_user_name_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_below="@+id/register_txt4"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounded_corner_edittext"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/register_username_tv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/user_fontawesome"
                        android:textColor="@color/user_color"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/register_username_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:text="@={registerScreenViewModel.username}"
                        android:background="@android:color/transparent"
                        android:hint="@string/username_hint_txt"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/txt_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>


                <TextView
                    android:id="@+id/register_email_txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_user_name_ll"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/email_txt"
                    android:textColor="@color/grey_txt_color1"
                    android:textSize="@dimen/_12ssp" />


                <LinearLayout
                    android:id="@+id/register_email_id_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/register_email_txt4"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounded_corner_edittext"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/register_email_id_tv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/email_fontawesome"
                        android:textColor="@color/user_color"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/register_email_id_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:text="@={registerScreenViewModel.emailId}"
                        android:hint="@string/email_hint_txt"
                        android:background="@android:color/transparent"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/txt_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>


                <TextView
                    android:id="@+id/register_password_txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_email_id_ll"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login_password_txt"
                    android:textColor="@color/grey_txt_color1"
                    android:textSize="@dimen/_12ssp" />


                <LinearLayout
                    android:id="@+id/register_password_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/register_password_txt4"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounded_corner_edittext"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/register_password_tv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/password_fontawesome"
                        android:textColor="@color/user_color"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/register_password_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:hint="@string/password_hint_txt"
                        android:text="@={registerScreenViewModel.password}"
                        android:paddingLeft="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/txt_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>


                <TextView
                    android:id="@+id/register_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/register_password_ll"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/gradiant_bg"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/register_txt1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:id="@+id/line_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@+id/register_login_btn"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@color/light_grey1">

                </View>

                <!--<TextView
                    android:id="@+id/google_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/line_view"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounded_corner_white_bg"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/signin_with_google_txt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />-->


                <RelativeLayout
                    android:id="@+id/google_rl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:orientation="horizontal"
                    android:layout_below="@+id/line_view"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounder_white_bg_with_border"
                    >

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/google_icon"
                        android:padding="@dimen/_8sdp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/google_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/signin_with_google_txt"
                        android:textColor="@color/grey_txt_color1"
                        android:textSize="@dimen/_10sdp" />

                </RelativeLayout>




            </RelativeLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>