<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data class="OTPActivityBinding">

        <variable
            name="otpScreenViewModel"
            type="com.mexcelle.everywhendemo.viewModel.OTPViewModel" />

    </data>



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/otp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:text="@string/otp_txt"
            android:textColor="@color/gradiant_color3"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/otp_txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp_title"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:text="@string/otp_txt1"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/otp_txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp_txt1"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:text="@string/otp_txt2"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_10sdp" />


        <EditText
            android:id="@+id/otp_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/otp_txt2"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toLeftOf="@+id/check_tv"
            android:background="@drawable/rounded_corner_edittext"
            android:text="@={otpScreenViewModel.otp}"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_10sdp" />


        <TextView
            android:id="@+id/check_tv"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/otp_txt2"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/check_fontawesome"
            android:textColor="@color/check_color"
            android:textSize="@dimen/_14sdp" />



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>